--- a/Website/server/package.json
+++ b/Website/server/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/niks-v/JuiceCord#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
