--- a/Website/server/package.json
+++ b/Website/server/package.json
@@ -4,7 +4,8 @@
   "description": "API for juicecord",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon . --ignore client",
+    "start": "node . --ignore client"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/niks-v/JuiceCord#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
