pulling my eyeballs out because i can't figure out this promise bug with signing up

--- a/Website/server/package.json
+++ b/Website/server/package.json
@@ -4,8 +4,8 @@
   "description": "API for juicecord",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon . --ignore client",
-    "start": "node . --ignore client"
+    "test": "nodemon .",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
